--- a/DeckOfCard/View/Base.lproj/Main.storyboard
+++ b/DeckOfCard/View/Base.lproj/Main.storyboard
@@ -32,9 +32,11 @@
                                     <action selector="drawButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mRe-qq-su1"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="KING of HEARTS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUp-mD-RO3">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="KING of HEARTS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUp-mD-RO3">
                                 <rect key="frame" x="106" y="224" width="216" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="9UE-fS-aCz"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -43,9 +45,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="lUp-mD-RO3" firstAttribute="centerX" secondItem="nnh-Nz-poV" secondAttribute="centerX" id="0rc-99-AJX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ixb-tW-QIa" secondAttribute="bottom" constant="123" id="8PQ-DZ-7gO"/>
                             <constraint firstItem="Ixb-tW-QIa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="186" id="948-9L-JrX"/>
                             <constraint firstItem="Ixb-tW-QIa" firstAttribute="centerX" secondItem="nnh-Nz-poV" secondAttribute="centerX" id="Ogl-MX-xvn"/>
+                            <constraint firstItem="lUp-mD-RO3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="180" id="qfE-Hh-AvB"/>
+                            <constraint firstItem="lUp-mD-RO3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="106" id="uST-HO-hZO"/>
+                            <constraint firstItem="nnh-Nz-poV" firstAttribute="top" secondItem="lUp-mD-RO3" secondAttribute="bottom" constant="48" id="zVM-hH-6Wn"/>
                         </constraints>
                     </view>
                     <connections>
