--- a/DeckOfCard/View/Base.lproj/Main.storyboard
+++ b/DeckOfCard/View/Base.lproj/Main.storyboard
@@ -16,15 +16,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nnh-Nz-poV">
-                                <rect key="frame" x="105" y="307" width="219" height="312"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nnh-Nz-poV">
+                                <rect key="frame" x="63" y="307" width="302" height="312"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ixb-tW-QIa">
-                                <rect key="frame" x="186" y="738" width="58" height="31"/>
-                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KING of HEARTS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUp-mD-RO3">
+                                <rect key="frame" x="106.33333333333331" y="224" width="300" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="lss-d4-yEB"/>
+                                    <constraint firstAttribute="height" constant="35" id="6qy-qb-Ouk"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="PC5-Qu-cAw"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ixb-tW-QIa">
+                                <rect key="frame" x="143" y="738" width="142" height="31"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <color key="tintColor" red="0.94423865060000001" green="0.94620104029999996" blue="0.92652448789999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Draw"/>
@@ -32,26 +39,20 @@
                                     <action selector="drawButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mRe-qq-su1"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="KING of HEARTS" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUp-mD-RO3">
-                                <rect key="frame" x="106" y="224" width="216" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="9UE-fS-aCz"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="italicSystem" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="lUp-mD-RO3" firstAttribute="centerX" secondItem="nnh-Nz-poV" secondAttribute="centerX" id="0rc-99-AJX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ixb-tW-QIa" secondAttribute="bottom" constant="123" id="8PQ-DZ-7gO"/>
-                            <constraint firstItem="Ixb-tW-QIa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="186" id="948-9L-JrX"/>
-                            <constraint firstItem="Ixb-tW-QIa" firstAttribute="centerX" secondItem="nnh-Nz-poV" secondAttribute="centerX" id="Ogl-MX-xvn"/>
-                            <constraint firstItem="lUp-mD-RO3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="180" id="qfE-Hh-AvB"/>
-                            <constraint firstItem="lUp-mD-RO3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="106" id="uST-HO-hZO"/>
-                            <constraint firstItem="nnh-Nz-poV" firstAttribute="top" secondItem="lUp-mD-RO3" secondAttribute="bottom" constant="48" id="zVM-hH-6Wn"/>
+                            <constraint firstItem="lUp-mD-RO3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NsG-eG-Jvz"/>
+                            <constraint firstItem="Ixb-tW-QIa" firstAttribute="centerX" secondItem="nnh-Nz-poV" secondAttribute="centerX" id="O3q-fr-7si"/>
+                            <constraint firstItem="lUp-mD-RO3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="180" id="RBg-pw-6KF"/>
+                            <constraint firstItem="nnh-Nz-poV" firstAttribute="top" secondItem="lUp-mD-RO3" secondAttribute="bottom" constant="48" id="fRe-U6-ttb"/>
+                            <constraint firstItem="nnh-Nz-poV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gBa-Cy-JEb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ixb-tW-QIa" secondAttribute="bottom" constant="123" id="rX3-TV-BsK"/>
+                            <constraint firstItem="Ixb-tW-QIa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="urL-NH-uDB"/>
+                            <constraint firstItem="nnh-Nz-poV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="wPq-fn-4mI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lUp-mD-RO3" secondAttribute="trailing" constant="21.666666666666686" id="x2k-7r-b6N"/>
+                            <constraint firstItem="nnh-Nz-poV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zOK-IJ-n36"/>
                         </constraints>
                     </view>
                     <connections>
